# tau

./: .gitignore  Cargo.toml  FRONTEND.md  GUI_DESIGN.md  ROADMAP.md
.github/workflows/: ci.yml
packaging/: tau.service
scripts/: gui-dogfood-smoke.sh  launch-smoke.sh
tau-cli/: Cargo.toml
tau-cli/src/: main.rs
tau-client/: Cargo.toml
tau-client/src/: lib.rs
tau-core/: Cargo.toml
tau-core/src/: agent.rs  agents.rs  codex.rs  config.rs  context.rs  credentials.rs  db.rs  git.rs  integrations.rs  lib.rs  permissions.rs  plan.rs
tau-core/src/config/: mod.rs  tests.rs
tau-core/src/credentials/: mod.rs  path.rs  provider.rs  store.rs  tests.rs
tau-core/src/db/: domain.rs  epochs.rs  journal.rs  messages.rs  mod.rs  policy.rs  prompts.rs  qa_records.rs  sessions.rs  tests.rs  usage.rs
tau-core/src/db/sql/: v1.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql
tau-core/src/provider/: kind.rs  mod.rs  ops.rs  test.rs  tests.rs
tau-core/src/tools/: bash.rs  edit.rs  error.rs  glob.rs  grep.rs  list.rs  mod.rs  mutation.rs  policy.rs  read.rs  registry.rs  snapshot.rs  tests.rs  transaction.rs  types.rs  write.rs
tau-core/src/tools/hashline/: mod.rs
tau-core/tests/: mcp.rs
tau-core/tests/fixtures/: mcp_server.py
tau-gui/: Cargo.toml
tau-gui/src/: backend.rs  chat.rs  composer.rs  feed.rs  input.rs  lib.rs  main.rs  operations.rs  picker.rs  preferences.rs  projects.rs  sessions.rs  shell.rs  theme.rs  view.rs
tau-gui/src/components/: mod.rs
tau-gui/src/views/: account.rs  header.rs  mod.rs  operations.rs
tau-gui/tests/: composer_bridge.rs  daemon_lifetime_subprocess.rs  editor_layout.rs  functional_acceptance.rs  gui_feature_survey.rs  headless_root_acceptance.rs  interactive_prompts.rs  operations_projection.rs  terminal_absence.rs
tau-proto/: Cargo.toml
tau-proto/src/: auth.rs  completion.rs  constants.rs  envelope.rs  git.rs  health.rs  lib.rs  ping.rs  policy.rs  prelude.rs  projects.rs  session.rs  turn.rs
tau-server/: Cargo.toml
tau-server/src/: completion.rs  lib.rs  oauth.rs  runtime.rs
tau-server/tests/: acceptance.rs  auth.rs  final_registry_audit.rs  gui_runtime_compat.rs  gui_turn_delivery.rs  launch_acceptance.rs  project_registry.rs  round_trip.rs  test_provider.rs  turn_runtime.rs
tau-server/tests/fixtures/: test_provider.py
tau-tui/: Cargo.toml
tau-tui/src/: adapter.rs  components.rs  composer.rs  feed.rs  lib.rs  operations.rs  projects.rs  reducer.rs  sessions.rs  shell.rs  state.rs
tau-tui/tests/: composer_bridge.rs  operations_snapshot.rs  real_daemon.rs  scripted_concurrency.rs  shell_acceptance.rs  terminal_absence.rs
