[workspace]
resolver = "3"
members = [
    "tau-core",
    "tau-proto",
    "tau-server",
    "tau-client",
    "tau-cli",
    "tau-gui",
    "tau-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0"
authors = ["Henry"]
repository = "https://github.com/henry/tau"

[workspace.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "io-util",
    "sync",
    "time",
    "fs",
    "process",
] }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "handshake",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
futures = "0.3"
gpui = "0.2"
crossterm = "0.28"
ratatui = "0.29"
globset = "0.4"
ignore = "0.4"
mime_guess = "2"
regex = "1"
sha1 = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "5"
fd-lock = "4"
tempfile = "3"
toml = "0.8"
keyring = "3"
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.6"
uuid = { version = "1", features = ["v4"] }
strum = { version = "0.28", features = ["derive"] }
rig-core = { version = "0.40", features = ["test-utils"] }

# internal
tau-proto = { path = "tau-proto", version = "0.1.0" }
tau-core = { path = "tau-core", version = "0.1.0" }
tau-client = { path = "tau-client", version = "0.1.0" }
tau-server = { path = "tau-server", version = "0.1.0" }
tau-gui = { path = "tau-gui", version = "0.1.0" }
tau-tui = { path = "tau-tui", version = "0.1.0" }
