[package]
name = "tau-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "tau — async client library (WebSocket JSON-RPC)"

[dependencies]
tau-proto.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
