[package]
name = "tau-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "tau — shared domain helpers (paths, config, credentials)"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
keyring.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
