[package]
name = "tau-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "tau — shared domain helpers (paths, config, credentials)"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
keyring.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
uuid.workspace = true
strum.workspace = true
rig-core.workspace = true
futures.workspace = true
globset.workspace = true
kdl.workspace = true
ignore.workspace = true
mime_guess.workspace = true
regex.workspace = true
sha1.workspace = true
tau-proto.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
