[package]
name = "tau-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-client.workspace = true
tau-core.workspace = true
tau-proto.workspace = true
tokio.workspace = true
