[package]
name = "tau-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
futures-util.workspace = true
serde_json.workspace = true
dirs.workspace = true
tempfile.workspace = true
tau-client.workspace = true
tau-core.workspace = true
tau-proto.workspace = true
tokio.workspace = true
kdl.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
